Add filter, image, rename html

--- a/css/animations.css
+++ b/css/animations.css
@@ -2,7 +2,7 @@
  * animations css stylesheet
  */
 
-/* animate ngRepeat in phone listing */
+/* animate ngRepeat in track listing */
 
 .track-listing.ng-enter,
 .track-listing.ng-leave,
