--- a/partials/partial1.html
+++ b/partials/partial1.html
@@ -1,32 +1,32 @@
 <div class="container-fluid">
   <div class="row-fluid">
-    <div class="span2">
-      <h1>SKIO</h1>
+
+    <div class="span4">
+      <h1>MUSIC</h1>
+      <h3>Column 1</h3>
 
         <p>This is the partial for view 1.</p>
         <p>more stuff...</p>
 
     </div>
-    <div class="span2">
-      <h1>SKIO</h1>
+
+    <div class="span4">
+      <h1>FRIENDS</h1>
+      <h3>Column 2</h3>
+
+        <p>Anothe.</p>
+        <p>more stuff...</p>
+
+    </div>
+
+    <div class="span4">
+      <h1>PORTFOLIO</h1>
+      <h3>Column 3</h3>
 
         <p>This is the partial for view 1.</p>
         <p>more stuff...</p>
 
     </div>
-    <div class="span6">
-      <h1>SKIO</h1>
 
-        <p>This is the partial for view 1.</p>
-        <p>more stuff...</p>
-
-    </div>
-    <div class="span2">
-      <h1>SKIO</h1>
-
-        <p>This is the partial for view 1.</p>
-        <p>more stuff...</p>
-
-    </div>
   </div>
 </div>
