--- a/css/app.css
+++ b/css/app.css
@@ -113,3 +113,12 @@ h1 {
   border-bottom: 1px solid gray;
 }
 
+/*** D3 tutz ***/
+
+div.bar {
+        display: inline-block;
+        width: 20px;
+        height: 75px; /* Gets overriden by D3-assigned height below */
+        margin-right: 2px;
+        background-color: teal;
+      }
