--- a/partials/partial1.html
+++ b/partials/partial1.html
@@ -1,4 +1,4 @@
-<!-- <div class="container-fluid">
+<div class="container-fluid">
   <div class="row-fluid">
 
     <div class="span4">
@@ -29,4 +29,4 @@
     </div>
 
   </div>
-</div> -->
+</div>
