--- a/partials/partial2.html
+++ b/partials/partial2.html
@@ -1,14 +1,59 @@
 <div class="container-fluid">
+
   <div class="row-fluid">
 
     <div class="span12">
-		<h1>ABOUT</h1>
-		<p>This is the partial for view 2.</p>
-		<p>
-		  Showing of 'interpolate' filter:
-		  {{ 'Current version is v%VERSION%.' | interpolate }}
-		</p>
+
+		<h1>{{trail.name}}</h1>
+
+		<p>{{trail.description}}</p>
+
+		<!-- <div class="trail-images">
+		  <img ng-src="{{img}}"
+		       class="trail"
+		       ng-repeat="img in trail.images"
+		       ng-class="{active: mainImageUrl==img}">
+		</div> -->
+
+		<ul class="trail-thumbs">
+		  <li ng-repeat="img in trail.images">
+		    <img ng-src="{{img}}" ng-click="setImage(img)">
+		  </li>
+		</ul>
+
+		<ul class="specs">
+		  <li>
+		    <span>Distance</span>
+		    <dl>
+		      <dt>Distance</dt>
+		      <dd ng-repeat="distance in trail.distance">{{distance}}</dd>
+		    </dl>
+		  </li>
+		  <li>
+		    <span>Elevation Gain</span>
+		    <dl>
+		      <dt>Elevation Gain</dt>
+		      <dd ng-repeat="elevationGain in trail.elevationGain">{{elevationGain}}</dd>
+		    </dl>
+		  </li>
+		  <li>
+		    <span>Highest Point</span>
+		    <dl>
+		      <dt>Highest Point</dt>
+		      <dd ng-repeat="highestPoint in trail.highestPoint">{{highestPoint}}</dd>
+		    </dl>
+		  </li>
+		  <li>
+		    <span>Average Grade</span>
+		    <dl>
+		      <dt>Average Grade</dt>
+		      <dd>{{trail.averageGrade}}</dd>
+		    </dl>
+		  </li>
+		</ul>
+
     </div>
 
   </div>
+
 </div>
