--- a/css/animations.css
+++ b/css/animations.css
@@ -2,36 +2,36 @@
  * animations css stylesheet
  */
 
-/* animate ngRepeat in track listing */
+/* animate ngRepeat in trail listing */
 
-.track-listing.ng-enter,
-.track-listing.ng-leave,
-.track-listing.ng-move {
+.trail-listing.ng-enter,
+.trail-listing.ng-leave,
+.trail-listing.ng-move {
   -webkit-transition: 0.5s linear all;
   -moz-transition: 0.5s linear all;
   -o-transition: 0.5s linear all;
   transition: 0.5s linear all;
 }
 
-.track-listing.ng-enter,
-.track-listing.ng-move {
+.trail-listing.ng-enter,
+.trail-listing.ng-move {
   opacity: 0;
   height: 0;
   overflow: hidden;
 }
 
-.track-listing.ng-move.ng-move-active,
-.track-listing.ng-enter.ng-enter-active {
+.trail-listing.ng-move.ng-move-active,
+.trail-listing.ng-enter.ng-enter-active {
   opacity: 1;
   height: 120px;
 }
 
-.track-listing.ng-leave {
+.trail-listing.ng-leave {
   opacity: 1;
   overflow: hidden;
 }
 
-.track-listing.ng-leave.ng-leave-active {
+.trail-listing.ng-leave.ng-leave-active {
   opacity: 0;
   height: 0;
   padding-top: 0;
