--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,64 @@
 /* app css stylesheet */
 
+@font-face {
+    font-family: 'misprojectregular';
+    src: url('../fonts/misproject-webfont.eot');
+    src: url('../fonts/misproject-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/misproject-webfont.woff') format('woff'),
+         url('../fonts/misproject-webfont.ttf') format('truetype'),
+         url('../fonts/misproject-webfont.svg#misprojectregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+body, html, #map {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.stations, .stations svg {
+  position: absolute;
+}
+
+.stations svg {
+  width: 60px;
+  height: 20px;
+  padding-right: 100px;
+  font: 10px sans-serif;
+  /*width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 0 25px 25px 25px;
+  border-color: transparent transparent #B52212 transparent;*/
+}
+
+.stations circle {
+  fill: brown;
+  stroke: black;
+  stroke-width: 1.5px;
+}
+
+h1, .h1, h2, .h2, h3, .h3 {
+  font-family: "misprojectregular", Helvetica, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+h1, .h1 {
+  font-size: 60px;
+  line-height: 68px;
+}
+
+.view-container {
+  margin: 0 auto;
+}
+
 .menu {
   list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
+  margin: 1em 0;
   padding: 0 0 0.5em;
 }
 
@@ -37,7 +92,7 @@
   float: left;
 }
 
-.musicTracks {
+.mountainTrails {
   list-style: none;
 }
 
@@ -49,13 +104,13 @@
   width: 100px;
 }
 
-.musicTracks li {
+.mountainTrails li {
   clear: both;
   height: 100px;
   padding-top: 15px;
 }
 
-img.track {
+img.trail {
   float: left;
   margin-right: 3em;
   margin-bottom: 2em;
@@ -65,25 +120,25 @@ img.track {
   width: 400px;
 }
 
-ul.track-thumbs {
+ul.trail-thumbs {
   margin: 0;
   list-style: none;
 }
 
-ul.track-thumbs li {
+ul.trail-thumbs li {
   border: 1px solid black;
   display: inline-block;
   margin: 1em;
   background-color: white;
 }
 
-ul.track-thumbs img {
+ul.trail-thumbs img {
   height: 100px;
   width: 100px;
-  padding: 1em;
+  padding: 0;
 }
 
-ul.track-thumbs img:hover {
+ul.trail-thumbs img:hover {
   cursor: pointer;
 }
 
